apps/linkding/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  labels:
    app: linkding
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
        - name: linkding
          image: "ghcr.io/sissbruecker/linkding:1.42.0-plus"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 15
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: "/"
              port: http
            initialDelaySeconds: 15
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - mountPath: /etc/linkding/data
              name: linkding-data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data
