apps/linkding/service.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.33.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
spec:
  ports:
    - name: http
      port: 9090
  selector:
    app: linkding
